# OptiGestion

./: .gitignore  LICENSE  README.md  pyproject.toml  user_settings.json
Data/: couts.csv  produits.csv  scenarios.json  volumes.csv
icons/: exit-door-icon-simple-vector-help-people-person-leaving_98396-66913.avif  icone-graphique-entreprise-dans-style-plat-colore-branche_41981-53.avif
src/: __init__.py  main.py
src/UI/: app.py  data_widget.py  entreprise_widget.py  graphique_widget.py  home_widget.py  login_window.py  main_window.py  profil_widget.py  register_window.py  sidebar.py  switch profil.py
src/analytics/: calculations.py  data_manager.py  reports.py
src/db/: __init__.py  optigestion.db  storage_module.py
src/modules/: Visualisation_module.py  analysis_module.py  costing_module.py  input_module.py  storage_module.py
src/utils/: helpers.py  settings.py  utils.py
tests/: test_storage.py
