[project]
name = "optigestion"
version = "0.1.0"
description = "Analyse Intelligente des Coûts de Production"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.0",
    "pyqt6>=6.10.2",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100